# us-2024-political-polarization

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: streamlit_app.py
config/: settings.toml
notebooks/: 01_eda.ipynb  02_modeling.ipynb
reports/: insights.md  summary_report.md
reports/tables/: cluster_feature_contrasts.csv  cluster_profiles.csv
src/polarization/: __init__.py  __main__.py  cleaning.py  config.py  features.py  io.py  modeling.py  profiling.py  utils.py  viz.py
tests/: test_cleaning.py  test_features.py  test_modeling.py
